--- a/app/src/main/res/layout/activity_vegetables_retailer.xml
+++ b/app/src/main/res/layout/activity_vegetables_retailer.xml
@@ -40,6 +40,7 @@
             android:id="@+id/RetailerTomatoImage"
             android:layout_width="165dp"
             android:layout_height="170dp"
+            android:layout_below="@+id/RetailerVegetableText1"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="20dp"
             app:srcCompat="@drawable/tomatovegetable" />
@@ -72,6 +73,8 @@
             android:layout_alignTop="@+id/RetailerTomatoImage"
             android:layout_toRightOf="@+id/RetailerTomatoImage"
             android:layout_marginLeft="5dp"
+            android:layout_below="@+id/RetailerVegetableText1"
+            android:layout_marginTop="45dp"
             android:text="Tomato"
             android:textColor="#0E0608"
             android:textSize="18dp" />
