--- a/app/src/main/res/layout/activity_vegetables_wholesaler.xml
+++ b/app/src/main/res/layout/activity_vegetables_wholesaler.xml
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/wholesalerVegetablesText1"
+            android:id="@+id/WholesalerVegetablesText1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -32,7 +32,7 @@
             android:layout_marginEnd="16dp"
             android:background="@color/black"
             android:gravity="center"
-            android:text="Wholesaler's vegetable categories"
+            android:text=" wholesaler's Vegetables categories"
             android:textColor="@color/white"
             android:textSize="20dp" />
 
@@ -41,7 +41,7 @@
             android:layout_width="165dp"
             android:layout_height="170dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="90dp"
+            android:layout_marginTop="60dp"
             app:srcCompat="@drawable/tomatovegetable" />
 
         <ImageView
@@ -55,12 +55,23 @@
 
 
 
+        <Button
+            android:id="@+id/WholesalerMyCartButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/WholesalerOnionImage"
+            android:layout_marginLeft="250dp"
+            android:layout_marginTop="100dp"
+            android:layout_marginRight="16dp"
+            android:text="My Cart" />
+
         <TextView
             android:id="@+id/WholesalerTomatoName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/WholesalerTomatoImage"
             android:layout_toRightOf="@+id/WholesalerTomatoImage"
+            android:layout_marginTop="25dp"
             android:layout_marginLeft="5dp"
             android:text="Tomato"
             android:textColor="#0E0608"
@@ -78,13 +89,133 @@
             android:textSize="18dp" />
 
 
+
+        <TextView
+            android:id="@+id/WholesalerTomatoCost"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/WholesalerTomatoName"
+            android:layout_toRightOf="@id/WholesalerTomatoImage"
+            android:layout_marginLeft="5dp"
+            android:text="Cost : Rs 40/1pcs"
+            android:textColor="#0E0608"
+            android:textSize="15dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/WholesalerOnionCost"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/WholesalerOnionName"
+            android:layout_toRightOf="@id/WholesalerOnionImage"
+            android:layout_marginLeft="5dp"
+            android:text="Cost : Rs 25/1pcs"
+            android:textColor="#0E0608"
+            android:textSize="15dp"
+            android:textStyle="bold" />
+
+
+
+        <TextView
+            android:id="@+id/WholesalerTomatoQuantity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/WholesalerTomatoCost"
+            android:layout_toRightOf="@id/WholesalerTomatoImage"
+            android:layout_marginLeft="5dp"
+            android:textSize="15dp"
+            android:text="Quantity"
+            android:textColor="#0E0608"
+            />
+
+        <TextView
+            android:id="@+id/WholesalerOnionQuantity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/WholesalerOnionCost"
+            android:layout_toRightOf="@id/WholesalerOnionImage"
+            android:layout_marginLeft="5dp"
+            android:textSize="15dp"
+            android:text="Quantity"
+            android:textColor="#0E0608"
+            />
+
+
+
+        <Button
+            android:id="@+id/WholesalerTomatoQauntDecButton"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/WholesalerTomatoQuantity"
+            android:onClick="decrementTomato"
+            android:layout_marginLeft="53dp"
+            android:layout_toRightOf="@id/WholesalerTomatoImage"
+            android:text="-" />
+
+        <TextView
+            android:id="@+id/WholesalerTomatoQuantityValue"
+            android:layout_width="33dp"
+            android:layout_height="47dp"
+            android:layout_below="@id/WholesalerTomatoQuantity"
+            android:layout_marginRight="3dp"
+            android:text="0"
+            android:gravity="center"
+            android:layout_toLeftOf="@id/WholesalerTomatoQauntIncButton"
+            android:layout_toRightOf="@id/WholesalerTomatoQauntDecButton" />
+
+        <Button
+            android:id="@+id/WholesalerTomatoQauntIncButton"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/WholesalerTomatoQuantity"
+            android:onClick="incrementTomato"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="46dp"
+            android:text="+" />
+
+        <Button
+            android:id="@+id/WholesalerOnionQauntDecButton"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/WholesalerOnionQuantity"
+            android:onClick="decrementOnion"
+            android:layout_marginLeft="53dp"
+            android:layout_toRightOf="@id/WholesalerOnionImage"
+            android:text="-" />
+
+        <TextView
+            android:id="@+id/WholesalerOnionQuantityValue"
+            android:layout_width="33dp"
+            android:layout_height="47dp"
+            android:layout_below="@id/WholesalerOnionQuantity"
+            android:layout_marginRight="3dp"
+            android:text="0"
+            android:gravity="center"
+            android:layout_toLeftOf="@id/WholesalerOnionQauntIncButton"
+            android:layout_toRightOf="@id/WholesalerOnionQauntDecButton" />
+
+        <Button
+            android:id="@+id/WholesalerOnionQauntIncButton"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/WholesalerOnionQuantity"
+            android:onClick="incrementOnion"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="46dp"
+            android:text="+" />
+
+
+
+
+
+
+
         <Button
             android:id="@+id/WholesalerTomatoQauntitySelectButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/WholesalerTomatoImage"
-            android:layout_marginTop="50dp"
-            android:layout_below="@id/WholesalerTomatoName"
+            android:layout_below="@id/WholesalerTomatoQauntIncButton"
             android:layout_marginLeft="88dp"
             android:text="Select"
             />
@@ -94,8 +225,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/WholesalerOnionImage"
-            android:layout_marginTop="50dp"
-            android:layout_below="@id/WholesalerOnionName"
+            android:layout_below="@id/WholesalerOnionQauntIncButton"
             android:layout_marginLeft="88dp"
             android:text="Select"
             />
