--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -29,7 +29,7 @@
         android:layout_marginEnd="8dp"
 
         android:ems="10"
-        android:hint="First Name"
+        android:hint="Name"
         android:inputType="textPersonName"
         android:textColor="#F7F7F8"
         android:textColorHint="#E9EAEE"
@@ -42,14 +42,14 @@
         app:layout_constraintVertical_bias="0.19" />
 
     <EditText
-        android:id="@+id/lastName"
+        android:id="@+id/cityName"
         android:layout_width="0dp"
         android:layout_height="54dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:textSize="20dp"
         android:ems="10"
-        android:hint="Last Name"
+        android:hint="City"
         android:inputType="textPersonName"
         android:textColor="#F7F7F8"
         android:textColorHint="#E9EAEE"
@@ -71,7 +71,7 @@
         android:textColorHint="#E9EAEE"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lastName" />
+        app:layout_constraintTop_toBottomOf="@+id/cityName" />
 
     <CheckBox
         android:id="@+id/isCustomer"
