--- a/app/src/main/res/layout/activity_customer_fruit_apple_add_to_cart_page.xml
+++ b/app/src/main/res/layout/activity_customer_fruit_apple_add_to_cart_page.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/CustomerFruitAppleSelectPage"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#8AF383"
+    android:orientation="vertical"
     tools:context=".CustomerFruitAppleAddToCartPage">
 
     <LinearLayout
@@ -16,7 +17,7 @@
         app:layout_constraintBottom_toTopOf="@+id/CustomerFruitAppleVendorDisplay"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
+        <EditText
             android:id="@+id/search_space"
             android:layout_width="302dp"
             android:layout_height="match_parent"
@@ -56,4 +57,4 @@
         </LinearLayout>
 
     </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
