--- a/app/src/main/res/layout/activity_customer_old_orders.xml
+++ b/app/src/main/res/layout/activity_customer_old_orders.xml
@@ -7,34 +7,28 @@
     android:layout_height="match_parent"
     android:background="#8AF383"
     android:orientation="vertical"
-    tools:context=".CustomerMainActivity">
+    tools:context=".CustomerOldOrders">
 
     <LinearLayout
         android:id="@+id/search"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/CustomerFruitAppleVendorDisplay"
+        app:layout_constraintBottom_toTopOf="@+id/oldordersspace"
         app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
+        <TextView
             android:id="@+id/search_space"
-            android:layout_width="302dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="search"
-            android:textSize = "18sp"
-            app:layout_constraintBottom_toTopOf="@+id/CustomerFruitAppleVendorDisplay" />
-
-        <Button
-            android:id="@+id/search_btn"
-            android:layout_width="105dp"
-            android:layout_height="match_parent"
-            android:text="search" />
+            android:text="              Old Orders"
+            android:textSize="36sp"
+            app:layout_constraintBottom_toTopOf="@+id/oldordersspace" />
 
     </LinearLayout>
 
     <ScrollView
-        android:id="@+id/CustomerFruitAppleVendorDisplay"
+        android:id="@+id/oldordersspace"
         android:layout_width="408dp"
         android:layout_height="612dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -62,22 +56,24 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/CustomerFruitAppleVendorDisplay"
+        app:layout_constraintTop_toBottomOf="@+id/oldordersspace"
         app:layout_constraintBottom_toTopOf="parent">
 
         <Button
-            android:id="@+id/previousorders"
+            android:id="@+id/mainPage"
             android:layout_width="203dp"
             android:layout_height="match_parent"
-            android:text="previous orders"
+            android:text="Main page"
             android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/CustomerFruitAppleVendorDisplay" />
+            app:layout_constraintBottom_toTopOf="@+id/oldordersspace" />
 
         <Button
             android:id="@+id/mycartbtn"
             android:layout_width="208dp"
             android:layout_height="match_parent"
-            android:text="my cart" />
+            android:text="my cart"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@+id/oldordersspace"/>
 
     </LinearLayout>
 </LinearLayout>
