--- a/app/src/main/res/layout/activity_customer_final_page.xml
+++ b/app/src/main/res/layout/activity_customer_final_page.xml
@@ -1,100 +1,140 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     tools:context=".CustomerFinalPage">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:background="#63E6B2"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
+        <Button
+            android:id="@+id/CustomerFinalPageAllOrders"
+            android:layout_width="166dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginBottom="113dp"
+            android:layout_marginEnd="209dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="209dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="536dp"
+            android:text="all orders" />
+
+        <Button
+            android:id="@+id/CustomerFinalPageGoToShop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginBottom="115dp"
+            android:layout_marginEnd="23dp"
+            android:layout_marginLeft="220dp"
+            android:layout_marginRight="23dp"
+            android:layout_marginStart="220dp"
+            android:layout_marginTop="541dp"
+            android:text="go to shop" />
+
+        <Button
+            android:id="@+id/CustomerFinalPageLogout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginBottom="33dp"
+            android:layout_marginEnd="22dp"
+            android:layout_marginLeft="13dp"
+            android:layout_marginRight="22dp"
+            android:layout_marginStart="13dp"
+            android:layout_marginTop="619dp"
+            android:text="logout" />
 
         <TextView
             android:id="@+id/CustomerFinalPageText1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentTop="true"
             android:layout_gravity="center"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="70dp"
+            android:layout_marginBottom="494dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="120dp"
+
             android:background="@color/black"
             android:gravity="center"
             android:text=" Order placed successfully"
-
             android:textColor="@color/white"
             android:textSize="40dp" />
+
         <TextView
             android:id="@+id/CustomerFinalPageText2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentTop="true"
             android:layout_gravity="center"
-            android:layout_below="@+id/CustomerFinalPageText1"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginBottom="373dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="266dp"
             android:background="@color/black"
             android:gravity="center"
             android:text="You will get confirmation after retailer confirms"
             android:textColor="@color/white"
             android:textSize="30dp" />
+
         <TextView
             android:id="@+id/CustomerFinalPageText3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="75dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentTop="true"
             android:layout_gravity="center"
-            android:layout_below="@+id/CustomerFinalPageText2"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginBottom="240dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="400dp"
             android:background="@color/black"
             android:gravity="center"
             android:text="Now you can logout safely"
             android:textColor="@color/white"
             android:textSize="30dp" />
 
-        <Button
-            android:id="@+id/CustomerFinalPageAllOrders"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/CustomerFinalPageText3"
-            android:text="all orders"
-            android:layout_marginTop="70dp"
-            />
-        <Button
-            android:id="@+id/CustomerFinalPageGoToShop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/CustomerFinalPageAllOrders"
-            android:layout_below="@+id/CustomerFinalPageText3"
-            android:layout_marginTop="70dp"
-            android:layout_marginLeft="25dp"
-            android:text="go to shop"
-            />
-        <Button
-            android:id="@+id/CustomerFinalPageLogout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/CustomerFinalPageGoToShop"
-            android:layout_below="@+id/CustomerFinalPageText3"
-            android:layout_marginTop="70dp"
-            android:layout_marginLeft="25dp"
-            android:text="logout"
-            />
-
 
     </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
