--- a/app/src/main/res/layout/activity_wholesaler.xml
+++ b/app/src/main/res/layout/activity_wholesaler.xml
@@ -13,5 +13,6 @@
         android:layout_marginBottom="511dp"
         android:text="Wholesaler"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="165dp" />
+        tools:layout_editor_absoluteX="165dp"
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
