--- a/app/src/main/res/layout/activity_customer_payment_options.xml
+++ b/app/src/main/res/layout/activity_customer_payment_options.xml
@@ -32,24 +32,6 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0">
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="61dp"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/CustomerPaymentOptionsText1"
-                android:layout_marginBottom="69dp"
-                android:layout_marginEnd="47dp"
-                android:layout_marginLeft="37dp"
-                android:layout_marginRight="47dp"
-                android:layout_marginStart="37dp"
-                android:layout_marginTop="81dp"
-                android:gravity="center"
-                android:text="Ok, place order" />
-
             <ImageView
                 android:id="@+id/CustomerPaymentOptionsImage"
                 android:layout_width="wrap_content"
@@ -61,6 +43,7 @@
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="39dp"
                 app:srcCompat="@drawable/under_construction" />
+
 
             <TextView
                 android:id="@+id/CustomerPaymentOptionsText1"
@@ -77,11 +60,30 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginStart="2dp"
                 android:layout_marginTop="58dp"
-                android:background="@color/white"
+                android:background="#63E6B2"
                 android:gravity="center"
                 android:text="Online payment facility is under construction \n\n Only cash on delivery is available"
-                android:textColor="@color/black"
-                android:textSize="18dp" />
+                android:textColor="@color/white"
+                android:textSize="18sp" />
+
+            <Button
+                android:id="@+id/place_order_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="61dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/CustomerPaymentOptionsText1"
+                android:layout_marginBottom="69dp"
+                android:layout_marginEnd="47dp"
+                android:layout_marginLeft="37dp"
+                android:layout_marginRight="47dp"
+                android:layout_marginStart="37dp"
+                android:layout_marginTop="81dp"
+                android:gravity="center"
+                android:text="Ok, place order" />
 
         </RelativeLayout>
 
